Fix the editor status change issue (Moonshine-IDE/Moonshine-IDE#1055)

--- a/src/skins/DominoAlignButtonSkin.mxml
+++ b/src/skins/DominoAlignButtonSkin.mxml
@@ -84,6 +84,16 @@
            
         }
 
+		 /**
+         * @private
+         */
+        private static const focusExclusions:Array = ["textDisplay"];
+
+        /**
+         *  @private
+         */
+        override public function get focusSkinExclusions():Array { return focusExclusions;};
+
 
 		]]>        
     </fx:Script>
