--- a/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
@@ -6,7 +6,7 @@
 								  xmlns:forms="view.forms.*"
 								  xmlns:mx="library://ns.adobe.com/flex/mx"
 								  xmlns:primeFaces="view.primeFaces.forms.*"
-								   creationComplete="onInputCreationComplete(event)"
+								  creationComplete="onInputCreationComplete(event)"
 								 >
 	<fx:Script>
 		<![CDATA[
@@ -943,11 +943,13 @@
 			<s:FormItem  skinClass="skins.FormItemSkin" width="100%">
 				<s:HGroup width="100%" verticalAlign="middle">
 				<s:Label text=": List" width="60" direction="rtl"/>
+				
 				<forms:DropdownListForm id="pardeflistsSelect"
                             label="" textProperty="listPardef"
-                            collectionProperty="lists" labelField="label" 
-							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
+                            collectionProperty="lists" labelField="label" valueField="value"
+							labelDisplayFunction="getDominoFieldObject" showTooltipFunction="getDominoFieldTooltip"
                             listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>	
+				
 				</s:HGroup>
 			</s:FormItem>
 
