--- a/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
@@ -943,9 +943,9 @@
 			<s:FormItem  skinClass="skins.FormItemSkin" width="100%">
 				<s:HGroup width="100%" verticalAlign="middle">
 				<s:Label text=": List" width="60" direction="rtl"/>
-				
+
 				<forms:DropdownListForm id="pardeflistsSelect"
-                            label="" textProperty="type"
+                            label="" textProperty="listPardef"
                             collectionProperty="lists" labelField="label" valueField="value" 
 							labelDisplayFunction="getDominoFieldObject" showTooltipFunction="getDominoFieldTooltip"
                             listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>	
