--- a/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
@@ -397,7 +397,7 @@
 		
 			private var pre_label_var:String="normal";
 
-				private function excludeMultipleSelect(item:ListBaseContentHolder):void
+			private function excludeMultipleSelect(item:ListBaseContentHolder):void
 			{
 				var normal_flag:Boolean = false;
 				var execute_array:Array=null;
@@ -584,7 +584,7 @@
 
 			}
 			private var firstLineButtonsName:ArrayList=new ArrayList(["firstCenter","firstLeft","firstRight"]);
-			private function firstLineSetting(val:String){
+			private function firstLineSetting(val:String,event:String){
 				for (var i:int = 0; i < firstLineButtonsName.length; i++)
                 {
                     var item:Object = firstLineButtonsName.getItemAt(i);
@@ -617,8 +617,11 @@
 					outdentInput.visible = outdentInput.includeInLayout = true;
 				}else{
 					//this is center 
-					this.selectedItem["indent"]="0";
-					this.selectedItem["outdent"]="0";
+					if(event=="click"){
+						this.selectedItem["indent"]="0";
+						this.selectedItem["outdent"]="0";
+					}
+					
 					//indentInput.value = outdentInput.value = "0";
 
 					indentInput.visible = indentInput.includeInLayout = false;
@@ -650,7 +653,7 @@
 					
 
 					//Alert.show("setbutton2:"+setbutton);
-					firstLineSetting(setbutton);
+					firstLineSetting(setbutton,"inital");
 				
 				}
 
@@ -938,9 +941,9 @@
 			<s:FormItem  skinClass="skins.FormItemSkin" width="100%">
 				<s:HGroup width="100%" verticalAlign="middle">
 					<s:Label text="First Line" width="60" direction="rtl"/>
-					<s:Button id="firstCenter" label="" skinClass="skins.DominoAlignButtonSkin"  icon="{ALIGN_CENTER}" height="25" width="30"  click="firstLineSetting('firstCenter')"/>
-					<s:Button id="firstRight" label="" skinClass="skins.DominoAlignButtonSkin"  icon="{ALIGN_RIGHT}" height="25" width="30"  click="firstLineSetting('firstRight')"/>
-					<s:Button id="firstLeft" label="" skinClass="skins.DominoAlignButtonSkin"  icon="{ALIGN_LEFT}" height="25" width="30"  click="firstLineSetting('firstLeft')"/>
+					<s:Button id="firstCenter" label="" skinClass="skins.DominoAlignButtonSkin"  icon="{ALIGN_CENTER}" height="25" width="30"  click="firstLineSetting('firstCenter','click')"/>
+					<s:Button id="firstRight" label="" skinClass="skins.DominoAlignButtonSkin"  icon="{ALIGN_RIGHT}" height="25" width="30"  click="firstLineSetting('firstRight','click')"/>
+					<s:Button id="firstLeft" label="" skinClass="skins.DominoAlignButtonSkin"  icon="{ALIGN_LEFT}" height="25" width="30"  click="firstLineSetting('firstLeft','click')"/>
 					<domino:TextForm label=":Indent" textProperty="indent" includeInLayout="false" visible="false"  id="indentInput" inputWidth="30"/>
 					<domino:TextForm label=":Outdent" textProperty="outdent" includeInLayout="false" visible="false" id="outdentInput" inputWidth="30"/>
 				</s:HGroup>
