Force indent and outdent to 0.25 (#Moonshine-IDE/Moonshine-IDE#1056)

--- a/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
@@ -612,11 +612,17 @@
 				if(val=="firstRight"){
 						indentInput.visible = indentInput.includeInLayout = true;
 						outdentInput.visible = outdentInput.includeInLayout = false;
+						if(event=="click"){
+							this.selectedItem["indent"]="0.25";
+						}
 			
 				}else if(val=="firstLeft"){
 					
 					indentInput.visible = indentInput.includeInLayout = false;
 					outdentInput.visible = outdentInput.includeInLayout = true;
+					if(event=="click"){
+							this.selectedItem["outdent"]="0.25";
+						}
 				}else{
 					//this is center 
 					if(event=="click"){
