--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -54,7 +54,8 @@
 			import view.domino.surfaceComponents.components.DominoSection;
 			import view.domino.surfaceComponents.components.DominoTabView;
 			import view.domino.surfaceComponents.components.DominoCalendar;
-			import mx.controls.Alert;
+			import view.domino.surfaceComponents.components.DominoSubForm;
+
 			
 			public var visualEditorType:String;
 			public var visualEditorFileType:String;
@@ -80,7 +81,8 @@
 						new ComponentListItem("Paragraph", DominoParagraph, {maxWidth: 120}),
 						new ComponentListItem("Section", DominoSection),
 						new ComponentListItem("TabView", DominoTabView),
-						new ComponentListItem("Calendar", DominoCalendar)
+						new ComponentListItem("Calendar", DominoCalendar),
+						new ComponentListItem("SubForm", DominoSubForm)
 							
 						]);
 					
