Done the generate subform example to correct place and make sure it can buuild success (#Moonshine-IDE/Moonshine-IDE#1015)

--- a/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
@@ -113,6 +113,9 @@
 				noneButton.setStyle("icon",ALIGN_NONE);
 				//initial align
 				initializeAlign();
+				if(this.selectedItem["color"]){
+
+				}
 
 
 				
